V7.16 CSV handling erweitert, mehrere Zeilen können angepasst werden.